syntax = "proto3";
package fx.gov.v1;

import "fx/gov/v1/params.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/pundiai/fx-core/v8/x/gov/types";

// Query defines the gRPC querier service for fx/x/gov module
service Query {
  rpc SwitchParams(QuerySwitchParamsRequest)
      returns (QuerySwitchParamsResponse) {
    option (google.api.http).get = "/fx/gov/v1/switch_params";
  }

  rpc CustomParams(QueryCustomParamsRequest)
      returns (QueryCustomParamsResponse) {
    option (google.api.http).get = "/fx/gov/v1/custom_params/{msg_url}";
  }
}

// QueryEGFParamsRequest is the request type for the Query/EGFParams RPC method.
message QuerySwitchParamsRequest {}

// QueryEGFParamsResponse is the response type for the Query/EGFParams RPC
// method.
message QuerySwitchParamsResponse {
  SwitchParams params = 1 [ (gogoproto.nullable) = false ];
}

// QueryCustomParamsRequest is the request type for the Query/CustomParams RPC
// method.
message QueryCustomParamsRequest { string msg_url = 1; }

// QueryCustomParamsResponse is the response type for the Query/CustomParams RPC
// method.
message QueryCustomParamsResponse {
  CustomParams params = 1 [ (gogoproto.nullable) = false ];
}