syntax = "proto3";
package fx.gov.v1;

import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "fx/gov/v1/params.proto";
import "gogoproto/gogo.proto";
import "amino/amino.proto";

option go_package = "github.com/pundiai/fx-core/x/gov/types";

// Msg defines the fx/x/gov Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc UpdateStore(MsgUpdateStore) returns (MsgUpdateStoreResponse);

  rpc UpdateSwitchParams(MsgUpdateSwitchParams)
      returns (MsgUpdateSwitchParamsResponse);

  rpc UpdateCustomParams(MsgUpdateCustomParams)
      returns (MsgUpdateCustomParamsResponse);
}

message MsgUpdateStore {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "gov/MsgUpdateStore";

  // authority is the address of the governance account.
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  repeated UpdateStore update_stores = 2 [ (gogoproto.nullable) = false ];
}

message MsgUpdateStoreResponse {}

message MsgUpdateSwitchParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "gov/MsgUpdateSwitchParams";

  // authority is the address of the governance account.
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  SwitchParams params = 2 [ (gogoproto.nullable) = false ];
}

message MsgUpdateSwitchParamsResponse {}

message MsgUpdateCustomParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "gov/MsgUpdateCustomParams";

  // authority is the address of the governance account.
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  string msg_url = 2;

  // NOTE: All parameters must be supplied.
  CustomParams custom_params = 3 [ (gogoproto.nullable) = false ];
}

message MsgUpdateCustomParamsResponse {}